--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -27,7 +27,11 @@ jobs:
       - name: Copy folder from source to target
         run: |
           git clone https://github.com/TanZhiwen2001/luci-app-adguardhome.git
+          git clone https://github.com/vernesong/OpenClash.git
+          git clone https://github.com/xiaorouji/openwrt-passwall.git
           cp -r ./luci-app-adguardhome/luci-app-adguardhome ./packages/
+          cp -r ./openwrt-passwall/luci-app-passwall ./packages/
+          cp -r ./OpenClash/luci-app-openclash ./packages/
 
           
       - name: Commit and push changes to target repository
