--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -26,17 +26,13 @@ jobs:
 
       - name: Copy folder from source to target
         run: |
-          git clone https://github.com/TanZhiwen2001/luci-app-adguardhome.git
-          git clone https://github.com/vernesong/OpenClash.git
-          git clone https://github.com/xiaorouji/openwrt-passwall.git
-          cp -r ./luci-app-adguardhome/luci-app-adguardhome ./packages/
-          cp -r ./openwrt-passwall/luci-app-passwall ./packages/
-          cp -r ./OpenClash/luci-app-openclash ./packages/
+          git clone https://github.com/fw876/helloworld
+          rm -r ./helloworld/.github
+          rm ./helloworld/LICENSE
+          rm ./helloworld/README.md
+          cd helloworld
+          ls
+          
 
           
-      - name: Commit and push changes to target repository
-        run: |
-          cd packages
-          git add .
-          git commit --allow-empty -m "Sync folder from source repository (no changes detected)"
-          git push origin main
+
