--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -1,18 +1,11 @@
 name: 编译openwrt固件
 
-on: 
-  release:
-    types: [published]
-
-  #push:
-  #  branches: 
-  #    - master
-
+on:
   schedule:
-    - cron:  1 0 * * 6
-  
-  watch:
-    types: [started]
+    - cron: '0 0 * * 6'  # 每星期六 UTC 时间 00:00 运行
+  push:
+    branches:
+      - main  # 保留 push 触发，用于手动测试
     
 
 jobs:
@@ -69,10 +62,7 @@ jobs:
         echo "src-git routing https://github.com/coolsnowwolf/routing" >> "feeds.conf.default"
         echo "src-git telephony https://github.com/openwrt/telephony.git;openwrt-23.05" >> "feeds.conf.default"
         echo 'src-git helloworld https://github.com/fw876/helloworld' >>feeds.conf.default
-        sed -i '$a\src-git openclash https://github.com/vernesong/OpenClash' ./feeds.conf.default
-        echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
-        echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
-        echo "src-git zheng https://github.com/zjt37/zheng.git;main" >> "feeds.conf.default"
+        echo "src-git zheng https://github.com/zjt37/packages.git;main" >> "feeds.conf.default"
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
