--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -40,6 +40,22 @@ jobs:
           git commit --allow-empty -m "Sync folder from source repository (no changes detected)"
           git push origin main
           
+     - name: Delete last workflow run
+       env:
+         GH_TOKEN: ${{ secrets.SOURCE_REPO_TOKEN }}
+       run: |
+         # 获取当前 workflow ID 和当前 run ID
+          current_run_id=$(curl -s -H "Authorization: token $SOURCE_REPO_TOKEN" \
+          https://api.github.com/repos/${{ github.repository }}/actions/runs \
+          | jq -r '.workflow_runs[0].id')
 
+        # 获取上次的 workflow run ID
+          previous_run_id=$(curl -s -H "Authorization: token $SOURCE_REPO_TOKEN" \
+          https://api.github.com/repos/${{ github.repository }}/actions/runs \
+          | jq -r '.workflow_runs[1].id')
+
+        # 删除上次的 workflow run
+          curl -X DELETE -H "Authorization: token $SOURCE_REPO_TOKEN" \
+          https://api.github.com/repos/${{ github.repository }}/actions/runs/$previous_run_id
           
 
