--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -44,9 +44,12 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.SOURCE_REPO_TOKEN }}
         run: |
-          current_run_id=$(curl -s -H "Authorization: token $GH_TOKEN" \
+          current_run_id=$(curl -s -H "Authorization: token $SOURCE_REPO_TOKEN" \
             https://api.github.com/repos/${{ github.repository }}/actions/runs \
             | jq -r '.workflow_runs[0].id')
-         
-          
+          previous_run_id=$(curl -s -H "Authorization: token $SOURCE_REPO_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/actions/runs \
+            | jq -r '.workflow_runs[1].id')
+          curl -X DELETE -H "Authorization: token $SOURCE_REPO_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/actions/runs/$previous_run_id
 
