--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -2,7 +2,7 @@ name: 编译openwrt固件
 
 on:
   schedule:
-    - cron: '0 0 * * 6'  # 每星期五 UTC 时间 00:00 触发
+    - cron: '0 1 * * 5'  # 每周五早上 1 点
   workflow_dispatch:  # 允许手动触发
     
 
