--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -40,4 +40,15 @@ jobs:
           git commit --allow-empty -m "Sync folder from source repository (no changes detected)"
           git push origin main
           
-
+      - name: Delete last workflow run
+        env:
+          GH_TOKEN: ${{ secrets.SOURCE_REPO_TOKEN }}
+        run: |
+          current_run_id=$(curl -s -H "Authorization: token $GH_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/actions/runs \
+            | jq -r '.workflow_runs[0].id')
+          previous_run_id=$(curl -s -H "Authorization: token $GH_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/actions/runs \
+            | jq -r '.workflow_runs[1].id')
+          curl -X DELETE -H "Authorization: token $GH_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/actions/runs/$previous_run_id
